feat: use relation mixins fix: group fields
